<resources>
    <string name="app_name">Amber</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug_overlay">Debug Overlay</string>
    <string name="action_rescan_music">Rescan Music</string>
    <string name="action_ui_follows_playback">Ui Follows Playback</string>
    <string name="action_exit">Exit</string>

    <!-- Strings related to Settings -->
    <string name="pref_general_settings">General Settings</string>

    <string name="pref_music_path_key">pref_music_path_key</string>
    <string name="pref_music_path">Music Path</string>
    <string name="pref_music_path_summ">Location of music files to be used</string>

    <string name="pref_validate_database_on_startup_key">pref_validate_database_on_startup_key</string>
    <string name="pref_validate_database_on_startup">Validate Database on Startup</string>
    <string name="pref_validate_database_on_startup_summ">Auto check for dead/new entries on app startup</string>

    <string name="play_bar_current_song_text_view_placeholder">[Artist Name - Title]</string>
    <string name="play_bar_search_edit_text_placeholder">[Search String]</string>

    <string name="internal_pref_library_init_key">internal_pref_library_init_key</string>
    <string name="internal_pref_shuffle_mode">internal_pref_shuffle_mode</string>
    <string name="internal_pref_repeat_mode">internal_pref_repeat_mode</string>
    <string name="internal_pref_show_debug">internal_pref_show_debug</string>
    <string name="internal_pref_ui_follows_playback">internal_pref_ui_follows_playback</string>

    <string name="internal_pref_display_spec_key">internal_pref_display_spec_key</string>

    <string name="menu_main_drawer_library">Library</string>
    <string name="menu_main_drawer_artist">Artist</string>
    <string name="menu_main_drawer_album">Album</string>
    <string name="menu_main_drawer_album_artist">Album Artist</string>
    <string name="menu_main_drawer_genre">Genre</string>
    <string name="menu_main_drawer_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
